--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@
   </head>
   <body class="debu">
 
+    <div class="ticket">
+      <h3>Dati Ticket Passeggero</h3>
+
+      <div class="dati-passeggero"><i class="fas fa-subway"></i>
+        <span id="tratta"></span>
+      </div>
+
+      <div class="dati-passeggero"><i class="far fa-calendar-alt"></i>
+        <span id="eta"></span>
+      </div>
+
+      <div class="dati-passeggero"><i class="fas fa-tag"></i>
+        <span id="prezzo-pieno"></span>
+      </div>
+
+      <div class="dati-passeggero"><i class="fas fa-percentage"></i>
+        <span id="sconto20"></span>
+      </div>
+
+      <div class="dati-passeggero"><i class="fas fa-percentage"></i>
+        <span id="sconto40"></span>
+      </div>
+
+      <div class="dati-passeggero"><i class="fas fa-tag"></i>
+        <span id="no-sconto"></span>
+      </div>
+
+      <div class="code"><i class="fas fa-qrcode"></i>
+        <span id="qr-code"></span>
+      </div>
+
+    </div>
+
+
+
     <script type="text/javascript" src="js/script.js"></script>
 
   </body>
