--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <span id="qr-code"></span>
       </div>
 
+      <div class="logo">
+        <img src="img/boolean-logo.png" alt=""><span class="rail">Railway</span>
+      </div>
+
     </div>
 
 
